[package]
name = "namesdao_api_resolver"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }